# quiz-app-tauri

./: .gitignore  README.md  package-lock.json  package.json  quiz.json  vite.config.js
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: QuestionCard.jsx  ResultsAnalysis.jsx
