[package]
name = "Quiz_App_FIC"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "quiz_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.17", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.17", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2.0.0-rc.4"  
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
